[metadata]
description = Modern high-performance serialization utilities for Python
url = https://github.com/explosion/srsly
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.6
setup_requires =
    wheel
    cython>=0.25

[options.entry_points]
# If spaCy is installed in the same environment as srsly, it will automatically
# have these readers available
spacy_readers =
    srsly.read_json.v1 = srsly:read_json
    srsly.read_jsonl.v1 = srsly:read_jsonl
    srsly.read_yaml.v1 = srsly:read_yaml
    srsly.read_msgpack.v1 = srsly:read_msgpack

[bdist_wheel]
universal = false

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503, E741
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    srsly/__init__.py
    srsly/msgpack/__init__.py
    srsly/cloudpickle/__init__.py

[mypy]
ignore_missing_imports = True

[mypy-srsly.cloudpickle.*]
ignore_errors=True
