[metadata]
description = Modern high-performance serialization utilities for Python
url = https://github.com/explosion/srsly
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Scientific/Engineering

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.9
install_requires =
    catalogue>=2.0.10,<3
    cloudpickle >=3.1.2,<4
    msgpack >=1.1,<2
    ruamel.yaml >=0.18.16,<1
    ujson >=5.11.0,<6

[options.entry_points]
# If spaCy is installed in the same environment as srsly, it will automatically
# have these readers available
spacy_readers =
    srsly.read_json.v1 = srsly:read_json
    srsly.read_jsonl.v1 = srsly:read_jsonl
    srsly.read_yaml.v1 = srsly:read_yaml
    srsly.read_msgpack.v1 = srsly:read_msgpack

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
ignore = E203, E266, E501, E731, W503, E741
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    srsly/__init__.py

[mypy]
ignore_missing_imports = True
